# clipxApi

./: build.sh  clean.sh  test.sh
examples/: Makefile  cpp_example.cpp  test
src/: CMakeLists.txt  api.h  exported.h  main.cpp
